# prova_movimento3

src/pkg1/: CMakeLists.txt  package.xml
src/pkg1/src/: lettura_singola.cpp
src/pkg2/: CMakeLists.txt  package.xml
src/pkg2/src/: lettura_continua.cpp
src/pkg3/: CMakeLists.txt  package.xml
src/pkg3/src/: prova3.cpp
src/pkg4/: CMakeLists.txt  package.xml
src/pkg4/src/: prova4.cpp  prova4b.cpp
