cmake_minimum_required(VERSION 3.0.2)
project(pkg1)

## Compile as C++11, supported in ROS Kinetic and newer
# add_compile_options(-std=c++11)

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
  control_msgs
  sensor_msgs
  actionlib
)

catkin_package()

include_directories(${catkin_INCLUDE_DIRS})

add_executable(lettura_singola src/lettura_singola.cpp)

target_link_libraries(lettura_singola 
      ${catkin_LIBRARIES})